# defi-icp-canister

./: Cargo.toml  README.md  dfx.json
frontend/: index.html
src/signalstack_canister_backend/: Cargo.toml  signalstack_canister_backend.did
src/signalstack_canister_backend/src/: lib.rs
